# filecabinet-rs

./: .gitignore  Cargo.toml  README.md  TODO.txt  default.nix  docker.nix  foo.cocoon  package.json  shell.nix
.github/: dependabot.yml
.github/workflows/: update-niv.yml
documents/: 2020-10-19_Hisilicon_specsheet_1.cocoon
nix/: default.nix  rust.nix  sources.json
src/: checksum.rs  cli.rs  crypto.rs  main.rs  old.rs  utils.rs
static/: style.css
templates/: index.html  index.html.tera  layout.html.tera
