[package]
name = "filecabinet"
version = "0.1.0"
authors = ["Danielle Jenkins <git@d6e.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
cocoon = "0.1.11"
rand = "0.7.3"
glob = "0.3.0"
serde = { version="1.0.115", features = ["derive"]}
serde_json = "1.0.57"
error-chain = "0.12.4"
itertools = "0.9.0"
tera = "1.5.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2.5"
mobc-postgres = "0.5.0"
mobc = "0.5.12"
chrono = { version = "0.4.15", features = ["serde"] }
askama = "0.10.3"
askama_derive = "0.10.3"
