[package]
name = "filecabinet"
version = "0.1.0"
authors = ["Danielle Jenkins <git@d6e.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
rocket = "0.4.5"
cocoon = "0.1.11"
rand = "0.7.3"
glob = "0.3.0"
serde = { version="1.0.115", features = ["derive"]}
serde_json = "1.0.57"
error-chain = "0.12.4"
itertools = "0.9.0"
rocket_contrib = { version="0.4.5", features = ["tera_templates"]}
chrono = "0.4.15"
regex = "1.3.9"
lazy_static = "1.4.0"
data-encoding = "2.3.0"
ring = "0.16.15"
