[package]
name = "filecabinet"
version = "0.2.1"
authors = ["Danielle Jenkins <git@d6e.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
cocoon = "0.1.11"
rand = "0.7.3"
glob = "0.3.0"
serde = { version="1.0.126", features = ["derive"]}
serde_json = "1.0.57"
error-chain = "0.12.4"
itertools = "0.9.0"
chrono = "0.4.15"
regex = "1.3.9"
lazy_static = "1.4.0"
data-encoding = "2.3.0"
ring = "0.16.15"
indicatif = {version = "*", features = ["rayon"]}
rayon = "1.5.0"
atomicwrites = "0.2.5"
iced = { version = "0.2.0", features = ["async-std", "debug", "image"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

